# pr-guardian

./: .env.example  .gitignore  =0.8.0  =5.0.0  README.md  pyproject.toml  requirements.txt  simulation_report_fail.json  simulation_report_pass.json
docs/: CONFIGURATION_GUIDE.md  GETTING_STARTED.md
pr_guardian/: __init__.py  __main__.py  config.py  models.py  orchestrator.py  webhook.py
pr_guardian/agents/: __init__.py  base_agent.py  code_analyst.py  figma_checker.py  jira_validator.py  judge.py  reporter.py  uml_checker.py
pr_guardian/integrations/: __init__.py  email_client.py  figma_client.py  github_client.py  jira_client.py
pr_guardian/parsers/: __init__.py  diff_parser.py  plantuml_parser.py
pr_guardian/templates/: __init__.py  email_fail.html  email_pass.html  report_dev.md  report_scrum.md
pr_guardian/utils/: __init__.py  helpers.py  logger.py
scripts/: simulate_pipeline.py
tests/: __init__.py  conftest.py  test_orchestrator.py
tests/fixtures/: sample_diagram.puml  sample_diff.patch  sample_jira_response.json
tests/test_agents/: __init__.py  test_code_analyst.py  test_figma_checker.py  test_jira_validator.py  test_judge.py  test_uml_checker.py
