[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pr-guardian"
version = "1.0.0"
description = "Système multi-agents de revue automatique de Pull Requests"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Team7" }]

[project.scripts]
pr-guardian = "pr_guardian.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
